fix intro img spacing and add section ids

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -10,7 +10,7 @@
   transition: all 200ms ease-in-out;
   a {
     color: var(--dark-bg);
-    font-size: rem(14);
+    font-size: rem(16);
     @include breakpoint(medium) {
       font-size: rem(16);
     }
