--- a/src/components/Intro.module.scss
+++ b/src/components/Intro.module.scss
@@ -2,6 +2,7 @@
 @use "../sass/globals/" as *;
 
 .intro {
+  padding-bottom: 0;
   @include breakpoint(medium) {
     padding-top: rem(120);
     padding-bottom: rem(0);
@@ -34,9 +35,9 @@
     }
   }
   &__image {
-    margin-top: rem(-30);
-    max-width: 80%;
+    max-width: 90%;
     @include breakpoint(medium) {
+      margin-top: rem(-30);
       max-width: rem(500);
     }
     @include breakpoint(large) {
