--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -16,6 +16,7 @@
   &__link {
     border-bottom: 1.5px solid var(--dark-bg);
     color: var(--light-text);
+    font-size: rem(14);
     margin: rem(6) rem(16);
     transition: border-color 250ms ease-in-out;
     &:hover {
