--- a/src/sass/globals/layout.scss
+++ b/src/sass/globals/layout.scss
@@ -1,7 +1,7 @@
 @use "../util/" as *;
 
 section {
-  padding: rem(40) rem(20);
+  padding: rem(30) rem(20);
   margin: 0;
   @include breakpoint(medium) {
     padding: rem(40) rem(50);
